...

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_Login"
        android:id="@+id/login_button"
        android:onClick="LoginPost"
        android:padding="15dp"
        android:textSize="15dp"
        android:layout_below="@+id/password_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@color/login_button_background" />

    <TextView
...

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_text_field"
        android:layout_below="@+id/email_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/background_material_light"
        android:padding="10dp"
        android:textColor="@color/default_font_color" />
...
