<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fiu.ssobec.Activity.ZonesDescriptionActivity"
    android:background="@color/default_background">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone_description_piechart_title"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_weight="1">

        <org.eazegraph.lib.charts.PieChart
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/mySimplePieChart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="8dp"
            app:egLegendTextSize="18sp"
            app:egUsePieRotation="true"
            app:egValueTextSize="36sp"
            android:layout_marginBottom="40dip"
            app:egInnerValueUnit="%"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <info.hoang8f.widget.FButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            fbutton:buttonColor="@color/fbutton_color_peter_river"
            fbutton:shadowColor="@color/fbutton_color_belize_hole"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:drawableLeft="@drawable/smallthermometer"
            android:drawablePadding="20dip"
            android:id="@+id/TemperatureButton"
            android:padding="90dip"
            android:onClick="getTemperature"
            android:text="@string/temperature"
            android:textColor="@color/default_background"
            android:layout_margin="5dip"
            android:textSize="20sp"
            android:layout_weight="1" />

        <info.hoang8f.widget.FButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            fbutton:buttonColor="@color/fbutton_color_alizarin"
            fbutton:shadowColor="@color/fbutton_color_pomegranate"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:drawableLeft="@drawable/smallgrouppeople"
            android:drawablePadding="20dip"
            android:id="@+id/OccupancyButton"
            android:padding="90dip"
            android:onClick="getOccupancy"
            android:text="@string/occupancy"
            android:textColor="@color/default_background"
            android:layout_margin="5dip"
            android:textSize="20sp"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <info.hoang8f.widget.FButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            fbutton:buttonColor="@color/fbutton_color_turquoise"
            fbutton:shadowColor="@color/fbutton_color_green_sea"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:drawableLeft="@drawable/smallplug"
            android:drawablePadding="20dip"
            android:id="@+id/PludLoadButton"
            android:padding="90dip"
            android:onClick="getPlugLoad"
            android:text="@string/status"
            android:textColor="@color/default_background"
            android:layout_margin="5dip"
            android:textSize="20sp"
            android:layout_weight="1" />

        <info.hoang8f.widget.FButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            fbutton:buttonColor="@color/fbutton_color_sun_flower"
            fbutton:shadowColor="@color/fbutton_color_orange"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:drawableLeft="@drawable/smalllightbulb"
            android:drawablePadding="20dip"
            android:id="@+id/ArtificialLightingButton"
            android:padding="90dip"
            android:onClick="getLighting"
            android:text="@string/artificialLighting"
            android:textColor="@color/default_background"
            android:layout_margin="5dip"
            android:textSize="20sp"
            android:layout_weight="1" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <info.hoang8f.widget.FButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                fbutton:buttonColor="@color/fbutton_color_wet_asphalt"
                fbutton:shadowColor="@color/fbutton_color_midnight_blue"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:padding="90dip"
                android:onClick="predictAC"
                android:text="@string/title_activity_acconsumption_prediction"
                android:textColor="@color/default_background"
                android:layout_margin="5dip"
                android:textSize="20sp"
                android:layout_weight="1"
                />

            <info.hoang8f.widget.FButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                fbutton:buttonColor="@color/fbutton_color_wet_asphalt"
                fbutton:shadowColor="@color/fbutton_color_midnight_blue"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:padding="90dip"
                android:onClick="predictConsumption"
                android:id="@+id/predict_consumption"
                android:text="@string/predict_appl_consumption"
                android:textColor="@color/default_background"
                android:layout_margin="5dip"
                android:textSize="20sp"
                android:layout_weight="1" />

        </LinearLayout>

        </LinearLayout>



</LinearLayout>
