...
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_marginTop="20dp" />

            <org.eazegraph.lib.charts.PieChart
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/myLightingChart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                app:egLegendTextSize="18sp"
                app:egUsePieRotation="true"
                app:egValueTextSize="36sp"
...
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_marginTop="20dp" />

            <org.eazegraph.lib.charts.PieChart
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/buildingLightingChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:egLegendTextSize="18sp"
            app:egUsePieRotation="true"
            app:egValueTextSize="36sp"
...
