...
    <item android:id="@+id/action_editusers"
        android:icon="@drawable/white_group_of_people_128"
        android:title="@string/action_editusers"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_location"
        android:title="@string/action_locate_user"
        android:checkable="true"
        android:orderInCategory="1"
        app:showAsAction="never" />
</menu>

