...
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/temperature_graph"
            android:background="@color/light_blue_background" />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
...
